# LearnAI

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
frontend/: README.md  index-vue3.html  index.html  package.json  vite.config.js  vue-app.html
src/agent/: agent.py  my_agent.py  webapp.py
src/agent/utils/: nodes.py  state.py  tools.py
test/: test_cal_model.py
